# ai-job-assistant-v2

./: .env.example  .gitignore  CLAUDE.md  README.md  README_0.md  README_A.md  README_B.md  README_C.md  README_D.md  README_E.md  README_F.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  gap_analysis.py  graph.py  job_source.py  main.py  models.py  parse.py  rank.py  schemas.py  tailor.py  tailor_graph.py
docs/: design.md  eval-strategy.md  prd.md  responsible-ai.md  roadmap.md
docs/adr/: 0001-python-uv.md  0002-fastapi-backend.md  0003-langgraph-orchestration.md  0004-claude-llm.md  0005-langfuse-observability.md  0006-docker-compose.md  0007-job-source-adzuna.md  0008-frontend-separate-app.md  0009-postgres-app-db.md  0010-openai-llm.md  0011-langgraph-postgres-checkpointer.md  0012-pdf-ingestion-pypdf.md  0013-separate-compose-stacks.md  0014-job-ranking-llm-reranker.md  0015-reject-rag-augmented-parsing.md  0016-resume-identity-dedup-deferred.md  0017-defer-upskilling-catalog.md  0018-reject-rag-for-tailoring.md  README.md
docs/diagrams/: architecture.md  context.md  flow.md
frontend/: index.html  style.css
migrations/: env.py
migrations/versions/: 16b71d16d303_add_resume_raw_text_and_tailor_run_table.py  6590f19eb5ba_add_job_pick_table.py  8306cd46c726_add_resume_and_parse_run_tables.py
scripts/: create-roadmap-board.sh  update-board-status.sh
tests/: test_health.py
tests/eval/: eval_gap_analysis.py  eval_job_search.py  eval_parse.py  eval_tailor.py
tests/eval/fixtures/: gap_1_expected.json  (+19 more)
